--- a/package.json
+++ b/package.json
@@ -1,45 +1,49 @@
 {
-  "name": "threlte-boiler-plate",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "dev": "vite dev --host",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
-    "lint": "prettier --check . && eslint .",
-    "format": "prettier --write .",
-    "model-pipeline:run": "node scripts/model-pipeline.js"
-  },
-  "devDependencies": {
-    "@sveltejs/adapter-auto": "^3.0.0",
-    "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
-    "@types/eslint": "^9.6.0",
-    "eslint": "^9.0.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.36.0",
-    "globals": "^15.0.0",
-    "prettier": "^3.1.1",
-    "prettier-plugin-svelte": "^3.1.2",
-    "svelte": "^4.2.7",
-    "svelte-check": "^3.6.0",
-    "typescript": "^5.0.0",
-    "vite": "^5.0.3",
-    "@theatre/studio": "^0.7.2",
-    "vite-plugin-mkcert": "^1.17.6"
-  },
-  "type": "module",
-  "dependencies": {
-    "three": "^0.159.0",
-    "@threlte/core": "^7.3.1",
-    "@threlte/extras": "^8.11.5",
-    "@threlte/rapier": "^2.0.1",
-    "@dimforge/rapier3d-compat": "^0.11.2",
-    "@threlte/theatre": "^2.1.8",
-    "@theatre/core": "^0.7.2",
-    "@threlte/xr": "^0.1.4",
-    "@threlte/flex": "^1.0.3"
-  }
+	"name": "threlte-boiler-plate",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "vite dev --host",
+		"build": "node build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier --write .",
+		"model-pipeline:run": "node scripts/model-pipeline.js"
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@types/eslint": "^9.6.0",
+		"eslint": "^9.0.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-svelte": "^2.36.0",
+		"globals": "^15.0.0",
+		"prettier": "^3.1.1",
+		"prettier-plugin-svelte": "^3.1.2",
+		"svelte": "^4.2.7",
+		"svelte-check": "^3.6.0",
+		"typescript": "^5.0.0",
+		"vite": "^5.0.3",
+		"@theatre/studio": "^0.7.2",
+		"vite-plugin-mkcert": "^1.17.6"
+	},
+	"type": "module",
+	"dependencies": {
+		"@dimforge/rapier3d-compat": "^0.11.2",
+		"@sveltejs/adapter-node": "^5.2.2",
+		"@theatre/core": "^0.7.2",
+		"@threlte/core": "^7.3.1",
+		"@threlte/extras": "^8.11.5",
+		"@threlte/flex": "^1.0.3",
+		"@threlte/rapier": "^2.0.1",
+		"@threlte/theatre": "^2.1.8",
+		"@threlte/xr": "^0.1.4",
+		"gsap": "^3.12.5",
+		"lenis": "^1.1.13",
+		"three": "^0.159.0",
+		"vite-plugin-glsl": "^1.3.0"
+	}
 }
