--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3",
 		"@theatre/studio": "^0.7.2",
-		"vite-plugin-mkcert": "^1.17.6"
+		"vite-plugin-mkcert": "^1.17.6",
+		"vite-plugin-glsl": "^1.3.0"
 	},
 	"type": "module",
 	"dependencies": {
@@ -43,7 +44,6 @@
 		"@threlte/xr": "^0.1.4",
 		"gsap": "^3.12.5",
 		"lenis": "^1.1.13",
-		"three": "^0.159.0",
-		"vite-plugin-glsl": "^1.3.0"
+		"three": "^0.159.0"
 	}
 }
