--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-	"name": "threlte-boiler-plate",
+	"name": "First Person Multishooter",
 	"version": "0.0.1",
 	"private": true,
+	"main": "server/index.js",
 	"scripts": {
 		"dev": "vite dev --host",
 		"build": "node build",
@@ -17,6 +18,7 @@
 		"@sveltejs/adapter-node": "^5.2.2",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@theatre/studio": "^0.7.2",
 		"@types/eslint": "^9.6.0",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
@@ -24,13 +26,13 @@
 		"globals": "^15.0.0",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
+		"sirv-cli": "^3.0.0",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3",
-		"@theatre/studio": "^0.7.2",
-		"vite-plugin-mkcert": "^1.17.6",
-		"vite-plugin-glsl": "^1.3.0"
+		"vite-plugin-glsl": "^1.3.0",
+		"vite-plugin-mkcert": "^1.17.6"
 	},
 	"type": "module",
 	"dependencies": {
